tests/errors/sem.cannot-be-float.arr-size.or
main :: () -> void {
    [5.5]int;
};
